test/lit/pto/tscatter_maskpattern_a5_reject.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5"} {
  func.func @tscatter_maskpattern_a5_reject() {
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=64, v_row=1, v_col=64, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=32, v_row=1, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    pto.tscatter ins(%src, {maskPattern = #pto.mask_pattern<P0101>} : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=64, v_row=1, v_col=64, blayout=row_major, slayout=none_box, fractal=512, pad=0>) outs(%dst : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=32, v_row=1, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
    func.return
  }
}

// CHECK: error: 'pto.tscatter' op mask-pattern tscatter is not supported on A5 yet
